# MindPy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api.md  architecture.md  conf.py  getting-started.md  plugin-development.md  requirements.txt
examples/: ai_bot.py  mining_bot.py  simple_bot.py
examples/plugins/: auto_save.py  chat_responder.py
mindpy/: __init__.py
mindpy/ai/: __init__.py  agent.py  reflection.py  tools.py
mindpy/api/: __init__.py  routes.py  server.py
mindpy/bot/: __init__.py  bot.py  manager.py
mindpy/cli/: __init__.py  main.py
mindpy/config/: __init__.py  config.py  settings.py
mindpy/crafting/: __init__.py  manager.py  planner.py  recipe.py
mindpy/events/: __init__.py  bus.py  event.py  handler.py
mindpy/goals/: __init__.py  decomposer.py  goal.py  manager.py
mindpy/inventory/: __init__.py  chest.py  inventory.py  manager.py
mindpy/llm/: __init__.py  anthropic_provider.py  gemini_provider.py  manager.py  ollama_provider.py  openai_provider.py  provider.py
mindpy/logging/: __init__.py  logger.py
mindpy/memory/: __init__.py  base.py  conversation.py  knowledge.py  long_term.py  manager.py  player.py  short_term.py  task.py  working.py  world.py
mindpy/mining/: __init__.py  miner.py  planner.py  safety.py
mindpy/navigation/: __init__.py  movement.py  pathfinding.py  waypoints.py
mindpy/plugins/: __init__.py  manager.py  plugin.py
mindpy/skills/: __init__.py  registry.py  skill.py
mindpy/tasks/: __init__.py  manager.py  task.py
mindpy/world/: __init__.py  biomes.py  blocks.py  chunks.py  entities.py
tests/: __init__.py  test_ai.py  test_config.py  test_crafting.py  test_events.py  test_goals.py  test_inventory.py  test_llm.py  test_memory.py  test_navigation.py  test_tasks.py
